<resources>
    <string name="app_name">GigFinder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur placerat dui dolor, et pretium tellus accumsan non. Sed ultrices tincidunt ipsum, convallis malesuada purus auctor et. Proin vel facilisis turpis, in aliquam libero. Nullam egestas eros dui, id auctor neque pretium hendrerit. Duis eu malesuada turpis. Vestibulum at odio eu nisi lobortis blandit. Quisque et interdum ligula. Fusce sed varius lorem. Nulla blandit luctus porttitor. In porttitor mauris ut sapien aliquam molestie.</string>
    <string name="lorem_ipsum_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur placerat dui dolor, et pretium tellus accumsan non. Sed ultrices tincidunt ipsum, convallis malesuada purus auctor et.</string>
    <string name="syracuse_ny">Syracuse, NY</string>
    <string name="song_name_2">Song Name #2</string>
    <string name="song_name_1">Song Name #1</string>
    <string name="band_name_here">Band Name Here</string>
    <string name="upcoming_shows">Upcoming Shows</string>
    <string name="biography">Biography</string>
    <string name="venue_name_here">Venue Name Here</string>
    <string name="location">Location</string>
    <string name="performing_artists">Performing Artists</string>
    <string name="april_14_2017">April 14, 2017</string>
    <string name="_7_pm">7 PM</string>
    <string name="event_description_goes_here">Event description goes here.</string>
    <string name="events">Events</string>
    <string name="artists">Artists</string>
    <string name="venues">Venues</string>
    <string name="gigfinder_logo">GigFinder logo</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
</resources>
