<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_venue_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="finalproject.csc214.project.venue.VenuePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:background="@android:drawable/dialog_holo_light_frame">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_border"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/venue_name_here"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/syracuse_ny"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/upcoming_shows"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:drawable/dialog_holo_light_frame">

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/location"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@android:drawable/dialog_holo_light_frame">

        </FrameLayout>

    </LinearLayout>

</ScrollView>
