<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="finalproject.csc214.project.band.BandBioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_border"
            android:minHeight="179dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/syracuse_ny"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/lorem_ipsum_2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:backgroundTint="@color/colorPrimary2"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/song_name_1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:backgroundTint="@color/colorPrimary2"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/song_name_2"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
