<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_band_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="finalproject.csc214.project.band.BandPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_weight="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:background="@drawable/bottom_border"
            android:text="@string/band_name_here"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/biography"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/upcoming_shows"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/band_page_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_weight="5"/>

</LinearLayout>
